[package]
name = "rust-wildbow-scraper"
version = "1.0.0"
authors = ["Nico Hickman <nicohman@demenses.net>"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4"
directories = "5.0"
structopt = "0.3.22"
hex = "0.4.2"
easy-error = "1.0"
epub-builder = "0.5"
lazy_static = "1.4.0"
scraper = "0.16.0"
ego-tree = "0.6.2"
html5ever = "0.26.0"
html-escape = "0.2.13"
markup5ever = "0.11.0"
xml5ever = "0.17.0"

